# ForgeKey

./: .gitignore  AGENTS.md  CLAUDE.md  DEBUG.md  DEVICE_COMMANDS.md  FORGEKEY_DEVICE.md  LOCK_DEVICE.md  PEOPLE_COUNTER.md  README.md  manifest  platformio.ini
.beads/: metadata.json
docs/: OTA_DEPLOYMENT.md
esp32c6-lock/: CMakeLists.txt  README.md  sdkconfig.defaults
esp32c6-lock/main/: CMakeLists.txt  Kconfig.projbuild  credential_rotation.c  credential_rotation.h  device_config.h  firmware_pubkey.h  firmware_verify.c  firmware_verify.h  lock_config.h  lock_state.c  lock_state.h  main.c  mqtt_handler.c  mqtt_handler.h  oms_ca.h  oms_command_pubkey.h  ota_update.c  ota_update.h  provisioning.c  provisioning.h  web_server.c  web_server.h  wifi_setup.c  wifi_setup.h
esp32c6-lock/scripts/: esp32c6-extract-secrets.py  esp32c6-sync-security.py
src/: main.cpp
src/camera/: camera_config.h  camera_manager.cpp  camera_manager.h
src/capabilities/: capability.h  registry.cpp  registry.h
src/config/: credential_rotation.cpp  credential_rotation.h
src/counting/: occupancy_counter.cpp  occupancy_counter.h
src/detection/: person_detector.cpp  person_detector.h  tflite_model.cpp  tflite_model.h
src/lock/: README.md  embedded_web.cpp  embedded_web.h  lock_capability.cpp  lock_capability.h  lock_config.h  lock_device.cpp  lock_device.h
src/mqtt/: mqtt_client.cpp  mqtt_client.h
src/ota/: ota_updater.cpp  ota_updater.h
src/photo_upload/: uploader.cpp  uploader.h
src/provisioning/: device_config.h  register.cpp  register.h
src/security/: firmware_pubkey.h  (+6 more)
(+21 files in other folders)
